--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                             <div class="topline"></div>
                         </li>
                         <li >
-                            <a href="#">Technologies</a>
-                            <div class="topline"></div>
-                        </li>
-                        <li>
                             <a href="#">Testimonials</a>
                             <div class="topline"></div>
                         </li>
                         <li>
-                            <a href="#">About us</a>
+                            <a href="#">Technologiesg</a>
+                            <div class="topline"></div>
+                        </li>
+                        <li>
+                            <a href="#">About Company</a>
                             <div class="topline"></div>
                         </li>
                     </ul>
